añadida pagina para ver sesiones y eventos para cada sesion, asi como links al reproductor. tambien correccion de errores que aparecian a veces debido a que no se guardaba el timestamp de la sesión y se tumbaba el servidor

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,109 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebChronicle</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 10px;
-            min-width: 300px;
-        }
-
-        h1 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 15px;
-        }
-
-        h2 {
-            color: #444;
-            font-size: 18px;
-            margin-top: 20px;
-        }
-
-        .session-info {
-            background-color: #f8f9fa;
-            padding: 10px;
-            border-radius: 4px;
-            margin-bottom: 15px;
-            border: 1px solid #dee2e6;
-        }
-
-        .session-info p {
-            margin: 5px 0;
-            color: #495057;
-        }
-
-        .session-id {
-            font-family: monospace;
-            background-color: #e9ecef;
-            padding: 2px 4px;
-            border-radius: 3px;
-        }
-
-        .blacklist-controls {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 15px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        input {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        button {
-            margin-top: 10px;
-            padding: 10px 15px;
-            font-size: 14px;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-            background-color: #007bff;
-            color: white;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        #toggleTracking {
-            width: 100%;
-            color: white;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-bottom: 10px;
-        }
-
-        #openDashboard {
-            width: 100%;
-            background-color: #6c757d;
-        }
-
-        #openDashboard:hover {
-            background-color: #545b62;
-        }
-
-        #addBlacklistSite, #addCurrentSite {
-            background-color: #28a745;
-            flex: 1;
-            margin-top: 0;
-        }
-
-        #addBlacklistSite:hover, #addCurrentSite:hover {
-            background-color: #218838;
-        }
-    </style>
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
     <div class="session-info">
